--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -195,6 +195,9 @@ nav:
     - Recruitment Managers:
       - Prolific: '!import https://github.com/autoresearch/autora-experiment-runner-recruitment-manager-prolific/?branch=main&extra_imports=["mkdocs/base.yml"]'
   - Workflow: '!import https://github.com/autoresearch/autora-workflow/?branch=main&extra_imports=["mkdocs/base.yml"]'
+  - Online Experiments:
+    - Home: 'online-experiments/index.md'
+    - Firebase: 'online-experiments/firebase.md'
 - Contributor Guide:
   - Home: 'contribute/index.md'
   - Modules:
