--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,5 +25,12 @@ repos:
       - id: mypy
         additional_dependencies: [types-requests]
         language_version: python3.8
+  - repo: https://github.com/srstevenson/nb-clean
+    rev: 2.4.0
+    hooks:
+      - id: nb-clean
+        args:
+          - --preserve-cell-outputs
+
 default_language_version:
   python: python3
