--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,3 +110,6 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
+
+[tool.setuptools]
+packages = []
