--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,8 +148,8 @@ nav:
 - Introduction: 'index.md'
 - Tutorials:
   - Home: 'tutorials/index.md'
-  - Automated Theorist: 'tutorials/theorist.ipynb'
-  - Automated Experimentalist: 'tutorials/experimentalist.ipynb'
+  - Automated Theorist: 'tutorials/Theorist.ipynb'
+  - Automated Experimentalist: 'tutorials/Experimentalist.ipynb'
   - Closed-Loop Discovery: 'workflow-tutorial/docs/interactive/Basic Usage.ipynb'
 - User Guide:
   - Theorists:
