--- a/.github/workflows/test-documentation-gh-pages.yml
+++ b/.github/workflows/test-documentation-gh-pages.yml
@@ -8,7 +8,7 @@ permissions:
   contents: read
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
