--- a/.github/workflows/publish-documentation-gh-pages.yml
+++ b/.github/workflows/publish-documentation-gh-pages.yml
@@ -1,8 +1,9 @@
 name: Publish Documentation to GitHub Pages
 
 on:
-  merge_group:
-    types: [checks_requested]  # when a pull request is added to a merge queue
+  push:
+    branches:
+      - 'main' # when someone pushes to the 'main' branch
   schedule:
     - cron: '59 3 * * *' # this triggers deployment every night at 3:59 UTC / 23:59 EST
   workflow_dispatch:  # this allows us to run it manually
