--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -16,4 +16,20 @@ jobs:
           repository: |
               AutoResearch/autora
               AutoResearch/autora-core
+              AutoResearch/autora-experimentalist-falsification
+              AutoResearch/autora-experimentalist-sampler-assumption
+              AutoResearch/autora-experimentalist-sampler-inequality
+              AutoResearch/autora-experimentalist-sampler-leverage
+              AutoResearch/autora-experimentalist-sampler-model-disagreement
+              AutoResearch/autora-experimentalist-sampler-nearest-value
+              AutoResearch/autora-experimentalist-sampler-novelty
+              AutoResearch/autora-experimentalist-sampler-uncertainty
+              AutoResearch/autora-experiment-runner-experimentation-manager-firebase
+              AutoResearch/autora-experiment-runner-firebase-prolific
+              AutoResearch/autora-experiment-runner-recruitment-manager-prolific
+              AutoResearch/autora-synthetic
+              AutoResearch/autora-theorist-bms
+              AutoResearch/autora-theorist-bsr
+              AutoResearch/autora-theorist-darts
+              AutoResearch/autora-workflow
           token: ${{ secrets.LABEL_SYNCER }}
