--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -1,10 +1,6 @@
 name: Sync labels
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - .github/labels.yml
+  workflow_dispatch:  # this allows us to run it manually
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,7 +8,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: micnncim/action-label-syncer@v1
         with:
-          manifest: path/to/manifest/labels.yml
+          manifest: .github/labels.yml
           repository: |
               AutoResearch/autora
               AutoResearch/autora-core
