--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -158,16 +158,17 @@ nav:
 - Introduction: 'index.md'
 - Tutorials:
   - Home: 'tutorials/index.md'
-  - Basic Tutorial:
+  - Basic:
     - I - Components: 'tutorials/basic/Tutorial-I-Components.ipynb'
     - II - Loop Constructs: 'tutorials/basic/Tutorial-II-Loop-Constructs.ipynb'
-    - III - Workflow Logic: 'tutorials/basic/Tutorial-III-Workflow-Logic.ipynb'
+    - III - Functional Workflow: 'tutorials/basic/Tutorial-III-Functional-Workflow.ipynb'
     - IV - Customization: 'tutorials/basic/Tutorial-IV-Customization.ipynb'
-  - Theorists: 'tutorials/Theorist.ipynb'
-  - Experimentalists: 'tutorials/Experimentalist.ipynb'
-  - Functional Workflow: 'core/docs/cycle/Linear and Cyclical Workflows using Functions and States.ipynb'
-  - Closed-Loop Discovery: 'workflow-tutorial/docs/interactive/Basic Usage.ipynb'
-  - Online Closed-Loop Discovery: 'user-cookiecutter/docs/index.md'
+  - Advanced:
+    - Equation Discovery: 'tutorials/Theorist.ipynb'
+    - Experimentalists: 'tutorials/Experimentalist.ipynb'
+    #- Functional Workflow: 'core/docs/cycle/Linear and Cyclical Workflows using Functions and States.ipynb'
+    - Closed-Loop Discovery: 'workflow-tutorial/docs/interactive/Basic Usage.ipynb'
+    - Online Closed-Loop Discovery: 'user-cookiecutter/docs/index.md'
 - User Guide:
   - Installation: 'installation.md'
   - Theorists:
