--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -143,7 +143,7 @@ markdown_extensions:
   pymdownx.superfences: {}
   pymdownx.arithmatex: # required for equation display
     generic: true
-  pymdownx.snippets: {}
+  pymdownx.snippets: { url_download: True }
   pymdownx.tabbed:
     alternate_style: true
 
