add optional dependency: abstract equation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dev = [
 all = [
   "autora[all-theorists]",
   "autora[all-experimentalists]",
+  "autora[all-synthetic]",
   "autora[all-experiment-runners]",
 ]
 
@@ -79,6 +80,14 @@ experimentalist-falsification =[
 ]
 experimentalist-sampler-mixture =[
   "mixture-experimentalist==1.0.0a4"
+]
+
+all-synthetic = [
+  "autora[synthetic-abstract-equation]"
+]
+
+synthetic-abstract-equation = [
+  "autora-synthetic-abstract-equation"
 ]
 
 all-experiment-runners = [
