--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -205,7 +205,8 @@ nav:
     - Recruitment Managers:
       - Prolific: '!import https://github.com/autoresearch/autora-experiment-runner-recruitment-manager-prolific/?branch=main&extra_imports=["mkdocs/base.yml"]'
   - "Command Line Interface":
-    - "Home": "core/docs/cli/basic-usage/README.md"
+    - "Home": "core/docs/cli/index.md"
+    - "Basic Usage": "core/docs/cli/basic-usage/README.md"
     - "Using Cylc": "core/docs/cli/cylc-pip/README.md"
     - "Using Cylc and Slurm": "core/docs/cli/cylc-slurm-pip/README.md"
   - Online Experiments:
