--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -155,16 +155,15 @@ nav:
 - Introduction: 'index.md'
 - Tutorials:
   - Home: 'tutorials/index.md'
-  - Basic:
-    - I - Components: 'tutorials/basic/Tutorial I Components.ipynb'
-    - II - Loop Constructs: 'tutorials/basic/Tutorial II Loop Constructs.ipynb'
-    - III - Functional Workflow: 'tutorials/basic/Tutorial III Functional Workflow.ipynb'
-    - IV - Customization: 'tutorials/basic/Tutorial IV Customization.ipynb'
-  - Advanced:
-    - Equation Discovery: 'theorist/Equation Discovery.ipynb'
-    - Experimentalists: 'tutorials/Experimentalist.ipynb'
-    - Online Closed-Loop Discovery: 
-      - 'user-cookiecutter/docs/index.md'
+  - I - Components: 'tutorials/basic/Tutorial I Components.ipynb'
+  - II - Loop Constructs: 'tutorials/basic/Tutorial II Loop Constructs.ipynb'
+  - III - Functional Workflow: 'tutorials/basic/Tutorial III Functional Workflow.ipynb'
+  - IV - Customization: 'tutorials/basic/Tutorial IV Customization.ipynb'
+- Examples:
+  - Equation Discovery: 'theorist/Equation Discovery.ipynb'
+  - Experimentalists: 'tutorials/Experimentalist.ipynb'
+  - Online Closed-Loop Discovery:
+    - 'user-cookiecutter/docs/index.md'
 - User Guide:
   - Installation: 'installation.md'
   - Terminology: 'terminology.md'
