--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -184,7 +184,9 @@ nav:
     - III - Connect Project With Firebase: 'examples/closed-loop-basic/testingzone.md'
     - IV - Connect Workflow With Forestore: 'examples/closed-loop-basic/init_autora.md'
     - V - Generating the Experiment: 'examples/closed-loop-basic/experiment.md'
-    - VI - Update the Workflow: 'examples/closed-loop-basic/workflow.md'
+    - VI - Create Proprocessing Pipeline: 'examples/closed-loop-basic/preprocessing.md'
+    - VII - Update the Workflow: 'examples/closed-loop-basic/workflow.md'
+    - VIII - Connect Project with Prolific: 'examples/closed-loop-basic/prolific.md'
   - Equation Discovery: 'theorist/Equation Discovery.ipynb'
   - Experimentalists: 'tutorials/Experimentalist.ipynb'
   - Online Closed-Loop Discovery:
